<resources>
    <string name="app_name">Bit</string>
    <string name="splash_description">Your habit tracker</string>
    <string name="good_bit">Good Bit</string>
    <string name="bad_bit">Bad Bit</string>

    <string name="bit_id_extra">bit_id</string>
    <string name="item_id_extra">item_id</string>
    <string name="item_type_extra">item_type</string>
    <string name="max_frequency_extra">maximum_frequency</string>
    <string name="name_extra">name</string>
    <string name="position_extra">position</string>

    <string name="id_of_habit_extra">id_habit</string>
    <string name="rv_position_extra">rv_position</string>

    <string name="habit_deleted_snackbar">Habit Deleted</string>
    <string name="undo">UNDO</string>

    <string name="notification_title">Update your counts</string>
    <string name="notification_body">Your habits are waiting for your honesty</string>

    <string name="action_delete">Delete</string>
    <string name="action_show_frequency">Show Frequency</string>
    <string name="action_hide_frequency">Hide Frequency</string>

    <string-array name="days_array">
        <item>Sa</item>
        <item>F</item>
        <item>Th</item>
        <item>W</item>
        <item>Tu</item>
        <item>M</item>
        <item>Su</item>
    </string-array>

    <string name="sunday">S</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>

    <string name="edittext_name_hint">Enter Name</string>
    <string name="edittext_frequency_hint">Enter Frequency</string>
    <string name="textview_frequency_hint">The maximum time you expect to do this habit in a day.</string>
    <string name="radio_good">Good</string>
    <string name="radio_bad">Bad</string>
    <string name="habit_type_textview">Habit Type</string>

    <string name="create_bit_title">Track New Habit</string>
    <string name="main_activity_title">Habits</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="empty_view_title_text">It\'s a bit lonely here.</string>
    <string name="empty_view_subtitle_text">Start by adding a habit you want to track.</string>

    <string name="limit_reached_toast_bad">Limit reached! You could have tried harder.</string>
    <string name="limit_crossed_toast_bad">You are already above the limit!</string>
    <string name="limit_reached_toast_good">Great! You\'ve reached the target.</string>
    <string name="limit_crossed_toast_good">Congratulations on surpassing your expectations!</string>
    <string name="bit_detail_introduction_toast">Press +1 to get started</string>
    <string name="expand_content_description">Show all bits</string>
</resources>
