<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayoutDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">
            <TextView
                android:textAlignment="center"
                android:text="@string/sunday"
                android:textSize="24dp"
                android:layout_width="50dp"
                android:layout_height="50dp" />

            <TextView
                android:textAlignment="center"
                android:text="@string/monday"
                android:textSize="24dp"
                android:layout_width="50dp"
                android:layout_height="50dp" />

            <TextView
                android:textAlignment="center"
                android:text="@string/tuesday"
                android:textSize="24dp"
                android:layout_width="50dp"
                android:layout_height="50dp" />
            <TextView
                android:textAlignment="center"
                android:text="@string/wednesday"
                android:textSize="24dp"
                android:layout_width="50dp"
                android:layout_height="50dp" />
            <TextView
                android:textAlignment="center"
                android:text="@string/thursday"
                android:textSize="24dp"
                android:layout_width="50dp"
                android:layout_height="50dp" />
            <TextView
                android:textAlignment="center"
                android:text="@string/friday"
                android:textSize="24dp"
                android:layout_width="50dp"
                android:layout_height="50dp" />
            <TextView
                android:textAlignment="center"
                android:text="@string/saturday"
                android:textSize="24dp"
                android:layout_width="50dp"
                android:layout_height="50dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/linearLayout"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutDays">

            <TextView
                android:id="@+id/bitTV_00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_textview"/>
            <TextView
                android:id="@+id/bitTV_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_textview"/>
            <TextView
                android:id="@+id/bitTV_02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_textview"/>
            <TextView
                android:id="@+id/bitTV_03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_textview"/>
            <TextView
                android:id="@+id/bitTV_04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_textview"/>
            <TextView
                android:id="@+id/bitTV_05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_textview"/>
            <TextView
                android:id="@+id/bitTV_06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_textview"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/linearLayout2"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <TextView
                android:id="@+id/bitTV_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_textview"/>
            <TextView
                android:id="@+id/bitTV_11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_textview"/>
            <TextView
                android:id="@+id/bitTV_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_textview"/>
            <TextView
                android:id="@+id/bitTV_13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_textview"/>
            <TextView
                android:id="@+id/bitTV_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_textview"/>
            <TextView
                android:id="@+id/bitTV_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_textview"/>
            <TextView
                android:id="@+id/bitTV_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_textview"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/linearLayout3"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <TextView
                android:id="@+id/bitTV_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_textview"/>
            <TextView
                android:id="@+id/bitTV_21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_textview"/>
            <TextView
                android:id="@+id/bitTV_22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_textview"/>
            <TextView
                android:id="@+id/bitTV_23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_textview"/>
            <TextView
                android:id="@+id/bitTV_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_textview"/>
            <TextView
                android:id="@+id/bitTV_25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_textview"/>
            <TextView
                android:id="@+id/bitTV_26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_textview"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/linearLayout4"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <TextView
                android:id="@+id/bitTV_30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_textview"/>
            <TextView
                android:id="@+id/bitTV_31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_textview"/>
            <TextView
                android:id="@+id/bitTV_32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_textview"/>
            <TextView
                android:id="@+id/bitTV_33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_textview"/>
            <TextView
                android:id="@+id/bitTV_34"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_textview"/>
            <TextView
                android:id="@+id/bitTV_35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_textview"/>
            <TextView
                android:id="@+id/bitTV_36"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_textview"/>
        </LinearLayout>


    </android.support.constraint.ConstraintLayout>


</layout>